--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,11 @@ pytz==2022.2.1
 requests==2.28.1
 six==1.16.0
 threadpoolctl==3.1.0
-torch==1.12.1+cpu 
 torchaudio==0.12.1
-torchvision==0.13.1+cpu 
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==1.11.0+cpu
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.12.0+cpu
 urllib3==1.26.12
 Werkzeug==2.2.2
 zipp==3.8.1
